# python-project-lvl4

./: .gitignore  Makefile  README.md  db.sqlite3  pyproject.toml  requirements.txt
.github/workflows/: pyci.yaml
labels/: forms.py  models.py  tests.py  urls.py  views.py
labels/migrations/: 0001_initial.py
locale/en/LC_MESSAGES/: django.mo  django.po
locale/ru/LC_MESSAGES/: django.mo  django.po
statuses/: forms.py  models.py  tests.py  urls.py  views.py
statuses/migrations/: 0001_initial.py
task_manager/: settings.py  urls.py  views.py  wsgi.py
task_manager/users/: views.py
tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_auto_20210126_1519.py  0002_statuses.py  0003_auto_20210126_1727.py  0003_tags.py
templates/: creating_and_updating_form.html  delete_user.html  deleting_form.html  displaying_items_form.html  users.html
templates/labels/: create.html  delete.html  labels.html  update.html
templates/registration/: login.html  register.html
templates/statuses/: create.html  delete.html  statuses.html  update.html
templates/task_manager/: index.html  layout.html
templates/tasks/: asd.html  create.html  create_status.html  create_tag.html  creating_and_updating_form.html  delete.html  delete_status.html  delete_tag.html  main.html  slk  statuses.html  tags.html  tasks.html  update.html
templates/users/: login.html  main.html  update.html
users/: forms.py  models.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
